--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5",
+    "tailwind-merge": "^2.2.0",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
